# League-Soccer

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile.in  README.md  ROADMAP.md  cmake_out.txt  cmake_out2.txt  docker-compose.yml  sources.cmake
.agents/workflows/: modernize_codebase.md
.github/workflows/: ci.yml
build-check/: CMakeCache.txt  DartConfiguration.tcl
build-headless/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build-headless/Testing/Temporary/: CTestCostData.txt
build-headless/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gameplayfootball_integration_tests  gameplayfootball_integration_tests[1]_include.cmake  gameplayfootball_integration_tests[1]_tests.cmake  gameplayfootball_math_tests[1]_include.cmake  gameplayfootball_math_tests[1]_tests.cmake  gameplayfootball_velocity_tests  gameplayfootball_velocity_tests[1]_include.cmake  gameplayfootball_velocity_tests[1]_tests.cmake
build-test/: CMakeCache.txt  DartConfiguration.tcl
data/locale/: de.ini  en.ini  es.ini  fr.ini  pt.ini
data/media/shaders/: ambient.frag
scripts/: setup_assets.sh
src/: blunted.cpp  blunted.hpp  dbquery.cpp  dbquery.hpp  defines.hpp  gamedefines.cpp  gamedefines.hpp  gametask.cpp  gametask.hpp  main.cpp  main.hpp  utils.cpp  utils.hpp
src/base/: circular_buffer.hpp  exception.cpp  exception.hpp  log.cpp  log.hpp  properties.cpp  properties.hpp  sdl_surface.cpp  sdl_surface.hpp  utils.cpp  utils.hpp
src/base/geometry/: aabb.cpp  aabb.hpp  line.cpp  line.hpp  plane.cpp  plane.hpp  triangle.cpp  triangle.hpp  trianglemeshutils.cpp  trianglemeshutils.hpp
src/base/math/: bluntmath.cpp  bluntmath.hpp  matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  vector3.cpp  vector3.hpp
src/data/: achievementdata.cpp  achievementdata.hpp  careerdata.cpp  careerdata.hpp  contractdata.hpp  draftdata.cpp  draftdata.hpp  facilitydata.cpp  facilitydata.hpp  matchdata.cpp  matchdata.hpp  matchhistory.cpp  matchhistory.hpp  moraledata.cpp  moraledata.hpp  playerdata.cpp  playerdata.hpp  scoutingdata.cpp  scoutingdata.hpp  setpiececonfig.cpp  setpiececonfig.hpp  staffdata.cpp  staffdata.hpp  teamdata.cpp  teamdata.hpp  transfermarket.cpp  transfermarket.hpp  youthacademy.cpp  youthacademy.hpp
src/framework/: scheduler.cpp  scheduler.hpp  tasksequence.cpp  tasksequence.hpp  workerthread.cpp  workerthread.hpp
src/hid/: gamepad.cpp  gamepad.hpp  ihidevice.hpp  keyboard.cpp  keyboard.hpp
src/league/: leaguecode.cpp  leaguecode.hpp
src/loaders/: aseloader.cpp  aseloader.hpp  imageloader.cpp  imageloader.hpp  wavloader.cpp  wavloader.hpp
src/managers/: environmentmanager.cpp  environmentmanager.hpp  resourcemanager.hpp  resourcemanagerpool.cpp  resourcemanagerpool.hpp  scenemanager.cpp  scenemanager.hpp  systemmanager.cpp  systemmanager.hpp  taskmanager.cpp  taskmanager.hpp  usereventmanager.cpp  usereventmanager.hpp
src/menu/: cameramenu.cpp  cameramenu.hpp  controllerselect.cpp  controllerselect.hpp  credits.cpp  credits.hpp  gameplan.cpp  gameplan.hpp  mainmenu.cpp  mainmenu.hpp  menuscene.cpp  menuscene.hpp  menutask.cpp  menutask.hpp  pagefactory.cpp  pagefactory.hpp  settings.cpp  settings.hpp  visualoptions.cpp  visualoptions.hpp
src/menu/career/: careerpages.cpp  careerpages.hpp
src/menu/ingame/: gameover.cpp  gameover.hpp  gamepage.cpp  gamepage.hpp  ingame.cpp  ingame.hpp  matchhistorypage.cpp  matchhistorypage.hpp  phasemenu.cpp  phasemenu.hpp  playerhud.cpp  playerhud.hpp  radar.cpp  radar.hpp  replaymenu.cpp  replaymenu.hpp  scoreboard.cpp  scoreboard.hpp  setpieceeditor.cpp  setpieceeditor.hpp  statsoverlay.cpp  statsoverlay.hpp  tacticsdebug.cpp  tacticsdebug.hpp
src/menu/league/: league.cpp  league.hpp  league_calendar.cpp  league_calendar.hpp  league_forward.cpp  league_forward.hpp  league_inbox.cpp  league_inbox.hpp  league_management.cpp  league_management.hpp  league_standings.cpp  league_standings.hpp  league_system.cpp  league_system.hpp  league_team.cpp  league_team.hpp
src/menu/startmatch/: loadingmatch.cpp  loadingmatch.hpp  matchoptions.cpp  matchoptions.hpp  teamselect.cpp  teamselect.hpp
src/menu/widgets/: gameplansubmenu.cpp  gameplansubmenu.hpp  planmap.cpp  planmap.hpp
src/misc/: perlin.cpp
src/onthepitch/: ball.cpp  ball.hpp  ballphysics.cpp  ballphysics.hpp  humangamer.cpp  humangamer.hpp  match.cpp  match.hpp  matchclock.hpp  officials.cpp  officials.hpp  proceduralpitch.cpp  proceduralpitch.hpp  referee.cpp  referee.hpp  team.cpp  team.hpp  teamAIcontroller.cpp  teamAIcontroller.hpp  velocitystate.hpp
src/onthepitch/AIsupport/: AIfunctions.cpp  AIfunctions.hpp  mentalimage.cpp  mentalimage.hpp
src/onthepitch/player/: player.cpp  player.hpp  playerbase.cpp  playerbase.hpp  playerofficial.cpp  playerofficial.hpp
src/scene/: iscene.hpp  object.cpp  object.hpp  objectfactory.cpp  objectfactory.hpp  scene.cpp  scene.hpp
src/scene/objects/: audioreceiver.cpp  audioreceiver.hpp  camera.cpp  (+13 more)
src/systems/: isystem.hpp  isystemobject.hpp  isystemscene.hpp  isystemtask.cpp  isystemtask.hpp
src/types/: command.cpp  command.hpp  interpreter.hpp  iusertask.cpp  iusertask.hpp  loader.hpp  lockable.hpp  material.hpp  messagequeue.hpp  observer.cpp  observer.hpp  refcounted.cpp  refcounted.hpp  resource.hpp  singleton.hpp  spatial.cpp  spatial.hpp  subject.hpp  thread.hpp  trianglemesh.cpp  trianglemesh.hpp
src/utils/: animation.cpp  animation.hpp  console.cpp  console.hpp  database.cpp  database.hpp  directoryparser.cpp  directoryparser.hpp  localization.cpp  localization.hpp  objectloader.cpp  objectloader.hpp  orbitcamera.cpp  orbitcamera.hpp  splitgeometry.cpp  splitgeometry.hpp  text2d.cpp  text2d.hpp  threadhud.cpp  threadhud.hpp  xmlloader.cpp  xmlloader.hpp
tests/: CMakeLists.txt
tests/base/: math_test.cpp
tests/career/: careerdata_test.cpp
tests/integration/: match_simulation_test.cpp
tests/onthepitch/: ball_physics_test.cpp  velocity_state_test.cpp
(+148 files in other folders)
